--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "YDD/vebra-api",
+    "name": "ydd/vebra",
     "description": "Vebra API Wrapper",
     "keywords": ["vebra"],
     "homepage": "https://github.com/mdavis1982/Vebra-PHP-API-Wrapper",
