Typo in composer.json

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         },
         {
             "name": "Kevin Coyle",
-            "email": "kevin.coyle@drutek.co.uk"
+            "email": "kevin.coyle@drutek.co.uk",
             "homepage": "https://drutek.co.uk"
         }
     ],
