--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "kriswallsmith/buzz": "*"
+        "kriswallsmith/buzz": "^0.10"
     },
     "autoload": {
         "psr-0": {
